@@ -52,7 +52,7 @@ Q ?= @ # be quiet
 CC = sdcc
 LINKER = gplink
 TARGETPIC = 16f877
-CFLAGS = -Wl,--map -I ../../device/include/pic -L ../../device/lib/pic/bin -mpic14 -pp$(TARGETPIC) -Wl,-q
+CFLAGS = -Wl,--map -I ../../device/include/pic -L ../../device/lib/pic/bin -mpic14 -pp$(TARGETPIC) -Wl,-q --no-pcode-opt
 
 .SUFFIXES: .asm .c .cod .stc
 
@@ -127,12 +127,12 @@ all:	test
 
 # The cod files are generated by sdcc
 .c.cod:
-	$(Q)$(CC) $(CFLAGS) $*.c
+	$(Q)-$(CC) $(CFLAGS) $*.c
 
 # The .stc files are script files for gpsim
 .cod.stc:
-	$(Q)./$(CREATESTC) $*.cod $*.stc
-	$(Q)./$(SIMULATE) $*.stc $(LOGFILE)
+	$(Q)-./$(CREATESTC) $*.cod $*.stc
+	$(Q)-./$(SIMULATE) $*.stc $(LOGFILE)
 
 # this will also make .stc files
 #%.stc : %.cod
